--- a/FE/index.html
+++ b/FE/index.html
@@ -3,12 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Google Tag Manager -->
+    <script>
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-PRPCKM4L');
+    </script>
+    <!-- End Google Tag Manager -->
     <title>Find Your Dream Playa del Carmen Homes for Sale | Buy with Dali</title>
     <meta
       name="description"
       content="Discover a diverse range of Playa del Carmen homes for sale with Dali. Begin your property search today and explore the perfect home for you to stay with."
     />
-    <link rel="canonical" href="https://buywithdali.com/" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Dalila Gelsomino" />
@@ -46,6 +54,9 @@
     </script>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PRPCKM4L" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <noscript>
       <img
         height="1"
