--- a/FE/index.html
+++ b/FE/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Google Tag Manager -->
+    <!-- === Analytics: Google Tag Manager === -->
     <script>
       (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -11,12 +11,15 @@
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','GTM-PRPCKM4L');
     </script>
-    <!-- End Google Tag Manager -->
+    <!-- === End Google Tag Manager === -->
+
+    <!-- === Base SEO === -->
     <title>Find Your Dream Playa del Carmen Homes for Sale | Buy with Dali</title>
     <meta
       name="description"
       content="Discover a diverse range of Playa del Carmen homes for sale with Dali. Begin your property search today and explore the perfect home for you to stay with."
     />
+    <!-- === Open Graph (Social) === -->
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Dalila Gelsomino" />
@@ -27,11 +30,12 @@
     <meta property="og:url" content="https://buywithdali.com/" />
     <meta property="og:site_name" content="Dalila Gelsomino" />
     <meta name="twitter:card" content="summary_large_image" />
+    <!-- === Icons / Manifest === -->
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png" />
     <link rel="apple-touch-icon" sizes="144x144" href="/images/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <!-- Meta Pixel Code -->
+    <!-- === Analytics: Meta Pixel === -->
     <script>
       !(function (f, b, e, v, n, t, s) {
         if (f.fbq) return;
@@ -54,9 +58,9 @@
     </script>
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
+    <!-- === Google Tag Manager (noscript) === -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PRPCKM4L" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+    <!-- === End Google Tag Manager (noscript) === -->
     <noscript>
       <img
         height="1"
